- save before migrating

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "cd \"src\" && yarn dev",
     "build": "yarn build:nuxt && yarn clean && yarn copyassets",
     "serve": "firebase serve --only functions,hosting",
-    "deploy": "firebase deploy",
-    "setup": "yarn setup:client && yarn setup:firebase && yarn setup:server",
+    "deploy": "yarn && yarn build && firebase deploy",
+    "setup": "yarn setup:client && yarn setup:server",
     "setup:client": "cd \"src\" && yarn install",
     "setup:server": "cd \"prod/server\" && yarn install",
     "setup:firebase": "mv .setup-firebaserc .firebaserc",
